objets-cours/examplepod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: examplepod  # name of the pod
  namespace: test   # namespace
spec:
  containers: #two containers
  - name: slappy
    image: nginx:1.7.9
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
  - name: webby
    image: registry.bchd/alta3-webby
    ports:
    - containerPort: 8888     # informative
      name: webby-port
      protocol: TCP
