objets-cours/my_first_pod-namespace.yaml
apiVersion: v1
kind: Pod
metadata:
        name: myfirstpod-2
  namespace: kube-system
spec:
  containers:
  - name: webster
    image: nginx
