objets-cours/sise-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata: # replicaset level
  name: simpleservice
spec:
  selector:
    matchLabels:
      app: simpleservice
  template:
    metadata: # PODS level
      labels: # match line 8 & 9
        app: simpleservice
        version: "1"
    spec:
      containers:
        - name: simpleservice
          image: "nginx"
        - name: simpleservice-web
          image: mhausenblas/simpleservice:0.5.0
          ports:
           - name: web
             containerPort: 9876
             protocol: TCP
