objets-cours/sise-lp.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: sise-lp
spec:
  containers:
  - name: sise
    image: mhausenblas/simpleservice:0.5.0
    ports:
    - containerPort: 9876
    livenessProbe:
      initialDelaySeconds: 2   # wait this long after restarting to do the first HTTP GET (default 0)
      periodSeconds: 5         # how often to probe (default is 1)
      timeoutSeconds: 1        # how long to wait until timeout occurs (default is 1)
      successThreshold: 1      # min consecutive successes to be considered "up" after a fail (default 1)
      failureThreshold: 3      # how many consecutive fails before pod is restarted (default 3)
      httpGet:                 # send HTTP GET to :9876/health/
        path: /health
        port: 9876
