objets-cours/webby-deploy.yaml
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
     name: webservice
     labels:
       app: webby
  spec:
    selector:
      matchLabels:
        app: webby
    replicas: 4
    template:
      metadata:
        labels:
          app: webby
      spec:
        containers:
        - name: webby
          image: bchd.registry/alta3-webby   # REPLACE WITH YOUR WEBBY IMAGE
          ports:
          - containerPort: 8888
